--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hi</h1>
     <button class="btn" id="btn" onclick="playSound()">Click me</button>
-    <audio id="audio" src="assets/Abraham Ronen/abrahamronen_10626.wav"></audio>
+    <audio id="audio" src="https://archive.org/download/hogwarts-legacy-voice-files/Abraham%20Ronen.rar/Abraham%20Ronen%2Fabrahamronen_10666.wav"></audio>
 
     <script src="script.js"></script>
 </body>
