--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
         <p id="a">Audio: </p>
         <button id="playButton">Play Sound</button>
         <audio id="audio"></audio>
-        <p id="s">status: </p>
     </div>
 
     <div class="music-sound">
         <p id="p2">Musique: </p>
         <p id="a2">Audio: </p>
         <button id="playButton2">Play Sound</button>
-        <audio id="audio2" src="https://kappa.vgmsite.com/soundtracks/hogwarts-legacy-original-video-game-soundtrack-2023/oammioezxw/01.%20Overture%20to%20the%20Unwritten%20%28from%20Hogwarts%20Legacy%29.mp3"></audio>
-        <p id="s2">status: </p>
+        <audio id="audio2"></audio>
     </div>
     
 
