add play new music button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p id="a2">Audio: </p>
         <button id="playButton2">Play Sound</button>
         <audio id="audio2"></audio>
+        <button id="newMusic">New Music</button>
     </div>
     
 
