--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="px-4 py-5 my-3 text-center">
-        <h1 class="display-1 text-warning">i miss my Hogwarts</h1>
+        <h1 id="h1" class="display-1 text-warning">i miss my Hogwarts</h1>
     </div>
 
     <div class="container px-4 py-5" id="featured-3">
@@ -48,6 +48,13 @@
             </div>
         </div>
     </div>
+
+    <select id="backgroundSelect" class="form-select form-select-sm" aria-label="Small select example" style="width: 150px; font-size: 12px;">
+        <option value="0" selected>Zero</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
