--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                     Accordion Item #1
                 </button>
@@ -70,6 +70,8 @@
             </div>
         </div>
     </div>
+
+    <p class="text-center text-primary" id="selected">Background</p>
 
     <select id="backgroundSelect" class="form-select form-select-sm" aria-label="Small select example"
         style="width: 150px; font-size: 12px;">
