--- a/index.html
+++ b/index.html
@@ -1,86 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
-    <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-
-    <style>
-
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>I Miss My Hogwarts</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
 </head>
-
 <body>
-    <div class="px-4 py-5 my-3 text-center">
-        <h1 id="h1" class="display-1 text-warning">i miss my Hogwarts</h1>
-    </div>
-
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Voices
-                </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body scrollable-list">
-                    <ul class="list-group checkbox-grid" id="checkboxList">
-                        <!-- Checkboxes will be inserted here by JavaScript -->
-                    </ul>
-                </div>>
-            </div>
-        </div>
-    </div>
-
-    <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom text-primary">Play sounds</h2>
-        <div class="row g-4 py-5 row-cols-2 row-cols-lg-2">
-            <div class="feature col">
-                <h3 class="badge text-bg-primary text-wrap" style="width: 6rem">
-                    Sounds
-                </h3>
-
-                <div class="character-sound">
-                    <p class="text-primary" id="p">Personnage:</p>
-                    <p class="text-primary" id="a">Audio:</p>
-                    <button class="audio paused" id="playButton"></button>
-                    <audio id="audio"></audio>
-                </div>
-            </div>
-            <div class="feature col">
-                <h3 class="badge text-bg-primary text-wrap" style="width: 6rem">
-                    Music
-                </h3>
-                <div class="music-sound">
-                    <p class="text-primary" id="p2">Musique:</p>
-                    <p class="text-primary" id="a2">Audio:</p>
-                    <button class="audio paused" id="playButton2"></button>
-
-                    <audio id="audio2"></audio>
-                    <button type="button" class="audio next" id="newMusic">
+    <div class="container">
+        <h1 class="title">I Miss My Hogwarts</h1>
+        <div class="accordion" id="hogwartsAccordion">
+            <!-- Voices Section -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#voicesCollapse" aria-expanded="true" aria-controls="voicesCollapse">
+                        Voices of Hogwarts
                     </button>
+                </h2>
+                <div id="voicesCollapse" class="accordion-collapse collapse show" data-bs-parent="#hogwartsAccordion">
+                    <div class="accordion-body">
+                        <div id="characterList" class="character-grid"></div>
+                        <div class="audio-controls">
+                            <p id="p">Personnage: Select a character</p>
+                            <p id="a">Audio: None</p>
+                            <input type="range" id="voiceVolume" min="0" max="1" step="0.01" value="1" class="volume-slider" title="Voice Volume">
+                            <button id="voiceMute" class="audio mute" title="Mute/Unmute Voice"></button>
+                            <button id="playButton" class="audio paused" title="Play/Pause Voice"></button>
+                            <audio id="audio"></audio>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Music Section -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#musicCollapse" aria-expanded="false" aria-controls="musicCollapse">
+                        Music of the Wizarding World
+                    </button>
+                </h2>
+                <div id="musicCollapse" class="accordion-collapse collapse" data-bs-parent="#hogwartsAccordion">
+                    <div class="accordion-body">
+                        <div class="audio-controls">
+                            <p id="p2">Musique: Select a track</p>
+                            <p id="a2">Audio: None</p>
+                            <input type="range" id="musicVolume" min="0" max="1" step="0.01" value="1" class="volume-slider" title="Music Volume">
+                            <button id="musicMute" class="audio mute" title="Mute/Unmute Music"></button>
+                            <button id="prevMusic" class="audio prev" title="Previous Track"></button>
+                            <button id="playButton2" class="audio paused" title="Play/Pause Music"></button>
+                            <button id="nextMusic" class="audio next" title="Next Track"></button>
+                            <button id="shuffleMusic" class="audio shuffle" title="Toggle Shuffle"></button>
+                            <audio id="audio2"></audio>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Background Section -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#backgroundCollapse" aria-expanded="false" aria-controls="backgroundCollapse">
+                        Hogwarts Ambiance
+                    </button>
+                </h2>
+                <div id="backgroundCollapse" class="accordion-collapse collapse" data-bs-parent="#hogwartsAccordion">
+                    <div class="accordion-body">
+                        <select id="backgroundSelect" class="form-select">
+                            <option value="">Choose a Background</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <p class="text-center text-primary" id="selected">Background</p>
-
-    <select id="backgroundSelect" class="form-select form-select-sm" aria-label="Small select example"
-        style="width: 150px; font-size: 12px;">
-    </select>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
