--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div id="voices" class="tab-content bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
             <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">Voices of Hogwarts</h2>
-            <div id="characterList" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 max-h-80 overflow-y-auto p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+            <div id="characterList" class="grid grid-cols-3 gap-1 max-h-80 overflow-y-auto p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
             <div class="audio-controls mt-6 text-center">
                 <p id="p" class="text-lg text-yellow-200 mb-2"><span class="font-bold">Personnage:</span> Select a character</p>
                 <p id="a" class="text-lg text-yellow-200 mb-4"><span class="font-bold">Audio:</span> None</p>
@@ -83,47 +83,44 @@
                 <p class="text-lg text-yellow-200 mb-4">
                     <span class="font-bold">Lore:</span> Explore the magical world of Hogwarts through its iconic characters and spells.
                 </p>
-                <div class="flex flex-col md:flex-row gap-4">
-                    <div class="flex-1">
-                        <h3 class="text-xl font-harry-potter text-yellow-400 mb-2">Characters</h3>
-                        <select id="loreFilter" class="w-full bg-gray-800 text-yellow-200 rounded-lg p-2 mb-4 focus:outline-none">
-                            <option value="all">All Characters</option>
-                            <option value="student">Students</option>
-                            <option value="staff">Staff</option>
-                            <option value="Gryffindor">Gryffindor</option>
-                            <option value="Hufflepuff">Hufflepuff</option>
-                            <option value="Ravenclaw">Ravenclaw</option>
-                            <option value="Slytherin">Slytherin</option>
-                        </select>
-                        <div id="characterLoreList" class="grid grid-cols-2 gap-4 max-h-80 overflow-y-auto p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+                <div class="flex flex-col gap-8">
+                    <div>
+                        <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">Characters</h3>
+                        <div class="flex flex-col sm:flex-row gap-2 mb-4">
+                            <input type="text" id="characterSearch" class="w-full sm:w-1/2 bg-gray-800 text-yellow-200 rounded-lg p-2 focus:outline-none" placeholder="Search characters...">
+                            <select id="loreFilter" class="w-full sm:w-1/2 bg-gray-800 text-yellow-200 rounded-lg p-2 focus:outline-none">
+                                <option value="all">All Characters</option>
+                                <option value="Gryffindor">Gryffindor</option>
+                                <option value="Hufflepuff">Hufflepuff</option>
+                                <option value="Ravenclaw">Ravenclaw</option>
+                                <option value="Slytherin">Slytherin</option>
+                            </select>
+                        </div>
+                        <div id="characterLoreList" class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
                         <div class="flex justify-center space-x-4 mt-4">
-                            <button id="prevPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all">Previous</button>
-                            <button id="nextPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all">Next</button>
+                            <button id="prevPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Previous</button>
+                            <button id="nextPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Next</button>
                         </div>
                         <div id="characterDetails" class="hidden mt-4 p-4 bg-gray-800 bg-opacity-50 rounded-lg text-yellow-200 text-lg"></div>
                     </div>
-                    <div class="flex-1">
-                        <h3 class="text-xl font-harry-potter text-yellow-400 mb-2">Spells</h3>
-                        <select id="spellFilter" class="w-full bg-gray-800 text-yellow-200 rounded-lg p-2 mb-4 focus:outline-none">
-                            <option value="all">All Spells</option>
-                            <option value="Charm">Charm</option>
-                            <option value="Spell">Spell</option>
-                            <option value="Curse">Curse</option>
-                            <option value="Jinx">Jinx</option>
-                            <option value="Hex">Hex</option>
-                            <option value="Healing Spell">Healing Spell</option>
-                            <option value="Transfiguration">Transfiguration</option>
-                            <option value="Counter Spell">Counter Spell</option>
-                        </select>
-                        <div id="spellList" class="grid grid-cols-2 gap-4 max-h-80 overflow-y-auto p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+                    <div>
+                        <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">Spells</h3>
+                        <div class="flex flex-col sm:flex-row gap-2 mb-4">
+                            <input type="text" id="spellSearch" class="w-full sm:w-1/2 bg-gray-800 text-yellow-200 rounded-lg p-2 focus:outline-none" placeholder="Search spells...">
+                            <select id="spellFilter" class="w-full sm:w-1/2 bg-gray-800 text-yellow-200 rounded-lg p-2 focus:outline-none">
+                                <option value="all">All Spells</option>
+                                <!-- Categories populated by JS -->
+                            </select>
+                        </div>
+                        <div id="spellList" class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
                         <div class="flex justify-center space-x-4 mt-4">
-                            <button id="prevSpellPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all">Previous</button>
-                            <button id="nextSpellPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all">Next</button>
+                            <button id="prevSpellPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Previous</button>
+                            <button id="nextSpellPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Next</button>
                         </div>
                         <div id="spellDetails" class="hidden mt-4 p-4 bg-gray-800 bg-opacity-50 rounded-lg text-yellow-200 text-lg"></div>
                     </div>
                 </div>
-                <p class="text-lg text-yellow-200 mt-4">
+                <p class="text-lg text-yellow-200 mt-6">
                     <span class="font-bold">Games:</span> Challenge your wizarding skills! Coming soon: Quidditch matches, potion-making puzzles, and spell-casting duels to test your magical prowess.
                 </p>
             </div>
