--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">Lore & Games</h2>
             <div class="text-center">
                 <p class="text-lg text-yellow-200 mb-4">
-                    <span class="font-bold">Lore:</span> Explore the magical world of Hogwarts through its iconic characters and spells.
+                    <span class="font-bold">Lore:</span> Explore the magical world of Hogwarts through its iconic characters, spells, and potions.
                 </p>
                 <div class="flex flex-col gap-8">
                     <div>
@@ -118,6 +118,22 @@
                             <button id="nextSpellPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Next</button>
                         </div>
                         <div id="spellDetails" class="hidden mt-4 p-4 bg-gray-800 bg-opacity-50 rounded-lg text-yellow-200 text-lg"></div>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">Potions</h3>
+                        <div class="flex flex-col sm:flex-row gap-2 mb-4">
+                            <input type="text" id="potionSearch" class="w-full sm:w-1/2 bg-gray-800 text-yellow-200 rounded-lg p-2 focus:outline-none" placeholder="Search potions...">
+                            <select id="potionFilter" class="w-full sm:w-1/2 bg-gray-800 text-yellow-200 rounded-lg p-2 focus:outline-none">
+                                <option value="all">All Potions</option>
+                                <!-- Categories populated by JS -->
+                            </select>
+                        </div>
+                        <div id="potionList" class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+                        <div class="flex justify-center space-x-4 mt-4">
+                            <button id="prevPotionPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Previous</button>
+                            <button id="nextPotionPage" class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">Next</button>
+                        </div>
+                        <div id="potionDetails" class="hidden mt-4 p-4 bg-gray-800 bg-opacity-50 rounded-lg text-yellow-200 text-lg"></div>
                     </div>
                 </div>
                 <p class="text-lg text-yellow-200 mt-6">
