fix ui small screen

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <!-- Options populated by JS -->
             </select>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
-            <div class="flex justify-center md:col-span-3">
-                <button class="tab-button active px-4 py-2 mx-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all" data-tab="voices">Voices</button>
-                <button class="tab-button px-4 py-2 mx-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all" data-tab="music">Music</button>
-                <button class="tab-button px-4 py-2 mx-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all" data-tab="background">Ambiance</button>
-                <button class="tab-button px-4 py-2 mx-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all" data-tab="lore-games">Lore & Games</button>
+        <div class="grid grid-cols-1 mb-8">
+            <div class="flex flex-wrap justify-center gap-2 md:gap-4 md:flex-nowrap">
+                <button class="tab-button active px-3 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all text-sm md:text-base md:px-4" data-tab="voices">Voices</button>
+                <button class="tab-button px-3 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all text-sm md:text-base md:px-4" data-tab="music">Music</button>
+                <button class="tab-button px-3 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all text-sm md:text-base md:px-4" data-tab="background">Ambiance</button>
+                <button class="tab-button px-3 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all text-sm md:text-base md:px-4" data-tab="lore-games">Lore & Games</button>
             </div>
         </div>
         <div id="voices" class="tab-content bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
