--- a/index.html
+++ b/index.html
@@ -150,10 +150,24 @@
                             <div id="potionDetails" class="hidden mt-4 p-4 bg-gray-800 bg-opacity-50 rounded-lg text-yellow-200 text-lg"></div>
                         </div>
                     </div>
+                    <div>
+                        <div class="flex items-center justify-between">
+                            <h3 class="text-xl font-harry-potter text-yellow-400">Games</h3>
+                            <button class="toggle-button bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all px-3 py-1" data-category="games">Collapse</button>
+                        </div>
+                        <div id="games-content" class="category-content mt-4">
+                            <p class="text-lg text-yellow-200 mb-4">
+                                <span class="font-bold">Sorting Hat Quiz:</span> Answer the Sorting Hat's questions to discover your Hogwarts house!
+                            </p>
+                            <div id="sorting-hat-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+                            <div id="quiz-progress" class="mt-4"></div>
+                            <div id="quiz-result" class="mt-4"></div>
+                            <p class="text-lg text-yellow-200 mt-4">
+                                <span class="font-bold">More Games:</span> Coming soon: Quidditch matches, potion-making puzzles, and spell-casting duels.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <p class="text-lg text-yellow-200 mt-6">
-                    <span class="font-bold">Games:</span> Challenge your wizarding skills! Coming soon: Quidditch matches, potion-making puzzles, and spell-casting duels to test your magical prowess.
-                </p>
             </div>
         </div>
     </div>
