fix phone background

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <div id="quiz-progress" class="mt-4"></div>
                             <div id="quiz-result" class="mt-4"></div>
                             <p class="text-lg text-yellow-200 mt-4">
-                                <span class="font-bold">More Games:</span> Coming soon: Quidditch matches, potion-making puzzles, and spell-casting duels.
+                                <span class="font-bold">More Games:</span> Coming soon: Sorting Hat Quiz enhanced, Wand Quiz, Patronus Quiz, and more!
                             </p>
                         </div>
                     </div>
