--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <audio id="audio"></audio>
             </div>
             <div class="funny-voices-controls mt-6 text-center">
-                <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">Funny Voices</h3>
+                <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">Funny Voices tracking (test)</h3>
                 <div class="flex justify-center items-center space-x-4">
                     <input type="range" id="funnyVoiceVolume" min="0" max="1" step="0.01" value="1" class="w-24 h-2 bg-gray-700 rounded-lg accent-yellow-400" title="Funny Voices Volume">
                     <button id="funnyVoiceMute" class="audio mute w-10 h-10 bg-gray-800 rounded-full hover-transition transition-all" title="Mute/Unmute Funny Voices"></button>
