--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         </div>
         <div id="voices" class="tab-content bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
             <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">Voices of Hogwarts</h2>
+            <div class="flex justify-left mb-4">
+                <label for="voiceSearch" class="sr-only">Search Characters</label>
+                <input id="voiceSearch" type="text" placeholder="Search characters..." class="w-full max-w-md px-3 py-2 border-2 rounded-lg bg-gray-800 bg-opacity-50 text-yellow-200 font-harry-potter text-sm sm:text-base focus:outline-none">
+            </div>
             <div id="characterList" class="grid grid-cols-3 gap-1 max-h-80 overflow-y-auto p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
             <div class="audio-controls mt-6 text-center">
                 <p id="p" class="text-lg text-yellow-200 mb-2"><span class="font-bold">Personnage:</span> Select a character</p>
