--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         </div>
         <div id="voices" class="tab-content bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
             <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">Voices of Hogwarts</h2>
-            <div class="flex justify-left mb-4">
+            <div class="flex justify-center mb-4">
                 <label for="voiceSearch" class="sr-only">Search Characters</label>
                 <input id="voiceSearch" type="text" placeholder="Search characters..." class="w-full max-w-md px-3 py-2 border-2 rounded-lg bg-gray-800 bg-opacity-50 text-yellow-200 font-harry-potter text-sm sm:text-base focus:outline-none">
             </div>
-            <div id="characterList" class="grid grid-cols-3 gap-1 max-h-80 overflow-y-auto p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
-            <div class="audio-controls mt-6 text-center">
+            <div id="voiceCharacterList" class="max-h-[300px] overflow-y-auto bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
+                <div id="characterList" class="grid grid-cols-3 gap-1"></div>
+            </div>
+            <div class="audio-controls mt-6 text-center bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
                 <p id="p" class="text-lg text-yellow-200 mb-2"><span class="font-bold">Personnage:</span> Select a character</p>
                 <p id="a" class="text-lg text-yellow-200 mb-4"><span class="font-bold">Audio:</span> None</p>
                 <div class="flex justify-center items-center space-x-4">
@@ -52,7 +54,7 @@
                 </div>
                 <audio id="audio"></audio>
             </div>
-            <div class="funny-voices-controls mt-6 text-center">
+            <div class="funny-voices-controls mt-6 text-center bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
                 <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">Funny Voices tracking (test)</h3>
                 <div class="flex justify-center items-center space-x-4">
                     <input type="range" id="funnyVoiceVolume" min="0" max="1" step="0.01" value="1" class="w-24 h-2 bg-gray-700 rounded-lg accent-yellow-400" title="Funny Voices Volume">
