--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         </div>
                         <div id="games-content" class="category-content mt-4">
                             <p class="text-lg text-yellow-200 mb-4">
-                                <span class="font-bold">Sorting Hat Quiz:</span> Answer the Sorting Hat's questions to discover your Hogwarts house!
+                                <span class="font-bold">Sorting Hat Quiz:</span> Answer the Sorting Hat's questions to discover your Hogwarts house with not less than 9720 questions combinations!
                             </p>
                             <div id="sorting-hat-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
                             <div id="quiz-progress" class="mt-4"></div>
