--- a/index.html
+++ b/index.html
@@ -177,8 +177,14 @@
                             <div id="sorting-hat-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
                             <div id="quiz-progress" class="mt-4"></div>
                             <div id="quiz-result" class="mt-4"></div>
+                            <p class="text-lg text-yellow-200 mb-4 mt-4">
+                                <span class="font-bold">Patronus Quiz:</span> Answer mystical questions to discover your Patronus, the magical guardian that reflects your inner spirit!
+                            </p>
+                            <div id="patronus-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+                            <div id="patronus-progress" class="mt-4"></div>
+                            <div id="patronus-result" class="mt-4"></div>
                             <p class="text-lg text-yellow-200 mt-4">
-                                <span class="font-bold">More Games:</span> Coming soon: Sorting Hat Quiz enhanced, Wand Quiz, Patronus Quiz, and more!
+                                <span class="font-bold">More Games:</span> Coming soon: Sorting Hat Quiz enhanced, Wand Quiz, and more!
                             </p>
                         </div>
                     </div>
@@ -187,5 +193,6 @@
         </div>
     </div>
     <script type="module" src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </body>
 </html>
