--- a/index.html
+++ b/index.html
@@ -354,15 +354,18 @@
                                 </button>
                             </div>
                             <div id="wand-content" class="category-content mt-4">
-                                <p class="text-lg text-yellow-200 mb-4">
-                                    <span class="font-bold">Wand Quiz:</span> Answer questions
-                                    to find the wand that chooses you, crafted to match your unique
-                                    magical essence!
-                                </p>
-                                <div id="wand-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
-                                <div id="wand-progress" class="mt-4"></div>
-                                <div id="wand-result" class="mt-4"></div>
-                            </div>
+    <p class="text-lg text-yellow-200 mb-4">
+        <span class="font-bold">Wand Quiz:</span> Answer questions
+        to find the wand that chooses you, crafted to match your unique
+        magical essence!
+    </p>
+    <button id="start-wand-quiz" class="bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all px-4 py-2 font-harry-potter text-lg mb-4">
+        Start Wand Quiz
+    </button>
+    <div id="wand-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
+    <div id="wand-progress" class="mt-4"></div>
+    <div id="wand-result" class="mt-4"></div>
+</div>
                         </div>
                         <div>
                             <div class="flex items-center justify-between">
