--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     </button>
     <div id="wand-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg hidden"></div>
     <div id="wand-progress" class="mt-4"></div>
-    <div id="wand-result" class="mt-4"></div>
+    <div id="wand-result" class="mt-4 hidden"></div>
 </div>
                         </div>
                         <div>
